# QtSnake

./: .gitignore  CMakeLists.txt  README.md  SNAKE_GAME_GUIDE.md
src/: main.cpp
src/Constants/: Constants.h  Direction.h  GameState.h  RendererType.h
src/core/: Food.cpp  Food.h  GameLogic.cpp  GameLogic.h  Snake.cpp  Snake.h
src/ui/: GameWidget.cpp  GameWidget.h  MainWindow.cpp  MainWindow.h  SceneGameView.cpp  SceneGameView.h
